# download_transcribe

./: .env  .gitignore  Dockerfile  app.py  audio_downloader.py  config.yaml  docker-compose.yml  file_manager.py  main.py  pyproject.toml  readme.md  requirements.txt  transcriber.py
config/: .env  config.yaml
deployment/docker/celery/: Dockerfile_beat
deployment/docker/text_processor/: Dockerfile
deployment/docker/transcription_service/: Dockerfile
docker/audio/: Dockerfile_converter  Dockerfile_normalizer  Dockerfile_splitter  Dockerfile_trimmer
docker/audio_processing/: Dockerfile_audio_converter  Dockerfile_audio_normalizer  Dockerfile_audio_splitter  Dockerfile_audio_trimmer
docker/audio_processor/: Dockerfile
docker/celery/: Dockerfile_beat  Dockerfile_celery_beat  Dockerfile_celery_worker  Dockerfile_worker
docker/celery_worker/: Dockerfile_celery
docker/dask_worker/: Dockerfile_audio_conversion_worker  Dockerfile_dask_scheduler  Dockerfile_ner_worker  Dockerfile_performance_monitor_worker  Dockerfile_pipeline_manager  Dockerfile_text_loading_worker  Dockerfile_text_saving_worker  Dockerfile_text_segmentation_worker  Dockerfile_text_tokenization_worker  Dockerfile_transcription_worker
docker/downloaders/: Dockerfile_download_manager  Dockerfile_youtube_downloader
docker/text_processing/: Dockerfile_loader  Dockerfile_ner_processor  Dockerfile_saver  Dockerfile_segmenter  Dockerfile_text_loader  Dockerfile_text_saver  Dockerfile_text_segmenter  Dockerfile_text_tokenizer  Dockerfile_tokenizer
docker/text_processor/: Dockerfile
docker/transcription_service/: Dockerfile  Dockerfile_audio_transcriber  Dockerfile_main_transcriber  Dockerfile_transcription_saver
infrastructure/: app_container.py  dependency_setup.py
infrastructure/docker/audio_processor/: Dockerfile
infrastructure/docker/celery/: Dockerfile_worker
infrastructure/docker/downloaders/: Dockerfile
infrastructure/registries/: configuration_registry.py  error_registry.py  generic_registry.py  model_registry.py  pipeline_component_registry.py
src/app/async_tasks/: base_task.py
src/app/cli/: __init__.py  app.py  cli_audio.py  cli_download.py  cli_text.py  cli_transcription.py
src/app/core/: __init__.py  batch_processor.py  memory_monitor.py  services.py
src/app/modules/: __init__.py  audio_command_handler.py  audio_handler.py  config_manager.py  configuration_manager.py  download_command.py  download_coordinator.py  helper_functions.py  model_loader.py  pipeline_manager.py  text_handler.py  text_processor.py  transcription_manager.py  transcription_model_loader.py
src/app/tasks/: base_task.py  observers.py
src/audio_pipeline/: audio_converter.py  audio_normalizer.py  audio_splitter.py  audio_trimmer.py  cli_audio.py
src/celery_tasks/: __init__.py  celery.py  cleanup_tasks.py  download_coordinator.py  download_tasks.py  schedule.py  shared_tasks.py  transcription_tasks.py
src/cli/: app.py  cli_audio.py  cli_download.py  cli_text.py  cli_transcription.py
src/config/: .env  config.yaml
src/core/: batch_processor.py  batch_processor_factory.py  exception_handler.py  file_manager.py  file_uploader.py  logger_manager.py  memory_monitor.py  performance_tracker.py  services.py  settings_registry.py
src/dask/: audio_conversion_worker.py  dask_scheduler.py  ner_worker.py  performance_monitor_worker.py  pipeline_manager.py  text_loading_worker.py  text_saving_worker.py  text_segmentation_worker.py  text_tokenization_worker.py  transcription_worker.py
src/dask_tasks/: audio_conversion_worker.py  dask_scheduler.py  ner_worker.py  performance_monitor_worker.py  pipeline_manager.py  text_loading_worker.py  text_saving_worker.py  text_segmentation_worker.py  text_tokenization_worker.py  transcription_worker.py
src/django/: settings.py
src/download_pipeline/: custom_exceptions.py  download_manager.py  youtube_downloader.py
src/downloads/: youtube_downloader.py
src/infrastructure/: app_container.py  dependency_setup.py
src/modules/: audio_handler.py  audio_handler_registry.py  audio_processing.py  config_manager.py  download_coordinator.py  file_manager.py  helper_functions.py  logger.py  pipeline_manager.py  text_processor.py  transcriber.py  transcription_manager.py  youtube_downloader.py
src/nlp_pipeline/: ner_processor.py  text_loader.py  text_saver.py  text_segmenter.py  text_tokenizer.py
src/scripts/: file_manager.py  main.py  process_transcriptions.py  setup_scrape.py  transcribe_podcasts.py
src/tasks/: observers.py
src/tests/: test_audio_processor_base.py  test_download_pipeline.py  test_text_processor_base.py
src/text_pipeline/: ner_processor.py  text_loader.py  text_saver.py  text_segmenter.py
src/transcription_pipeline/: audio_transcriber.py  main_transcriber.py  transcription_saver.py
src/utils/: concurrency_manager.py  file_utilities.py  filename_sanitizer.py  helper_functions.py  logger_service.py  message_logger.py  performance_configurator.py  performance_tracker.py  performance_tracker_service.py  progress_bar.py  structlog_logger.py  timestamp_formatter.py  tracking_utilities.py  yaml_parser.py
tests/: test_audio_converter.py
tests/audio_pipeline/: audio_converter_test.py  audio_normalizer_test.py  audio_splitter_test.py  cli_audio_test.py
tests/cli/: app_test.py
tests/core/: batch_processor_test.py  file_manager_test.py  file_uploader_test.py  memory_monitor_test.py  performance_tracker_test.py
tests/download_pipeline/: download_manager_test.py  youtube_downloader_test.py
tests/modules/: audio_handler_test.py  config_manager_test.py  download_coordinator_test.py  helper_functions_test.py  pipeline_manager_test.py  text_processor_test.py  transcription_manager_test.py
tests/text_pipeline/: ner_processor_test.py  text_loader_test.py  text_saver_test.py  text_tokenizer_test.py
tests/transcription_pipeline/: audio_transcriber_test.py  main_transcriber_test.py  transcription_saver_test.py
tests/utils/: filename_sanitizer_test.py  message_logger_test.py  progress_bar_test.py  timestamp_formatter_test.py
(+155 files in other folders)
