[tool.poetry]
name = "audio-transcription-tool"
version = "0.1.0"
description = "A tool for downloading, transcribing, and processing audio files from YouTube."
authors = ["SSD"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "src" }
]

[tool.poetry.dependencies]
# Python compatibility range
python = ">=3.10,<3.13"
django = "^4.0"  # Web framework for building the application

# Core dependencies for transcription_pipeline and modules modules
openai-whisper = { git = "https://github.com/openai/whisper.git" }
whisperx = "^0.1"  # Advanced ASR with word-level timestamps and speaker diarization
speechbrain = "^0.5.13"  # Advanced speech modules
torch = "^2.0.1"  # Required for deep learning models

# Scientific libraries for data modules
numpy = "^1.23"  # For numerical operations
pandas = "^1.5"  # For data manipulation
scipy = "^1.10"  # For scientific computing

# NLP tools for text modules
nltk = "^3.8"  # For text tokenization and modules
spacy = "^3.5"  # NLP library for named entity recognition
spacy-transformers = "^1.2"  # Transformer integration for advanced NLP

# Audio utilities for handling modules files
pydub = "^0.25"  # For modules modules (format conversion, etc.)
soundfile = "^0.12"  # For reading/writing modules files

# Utilities for task automation and environment management
requests = "^2.31"  # HTTP library for API requests
tqdm = "^4.65"  # Progress bars for long-running tasks
tenacity = "^8.2"  # Retry logic for handling transient errors
python-dotenv = "^1.0"  # Loads environment variables from a .env file
pyyaml = "^6.0"  # For YAML configuration file handling
click = "^8.1.3"  # Command-line interface creation

[tool.poetry.dev-dependencies]
# Development, testing, and quality assurance tools
pytest = "^7.0"  # Testing framework
pytest-cov = "^4.0"  # Code coverage plugin for pytest
unittest = "^1.0"  # Testing framework
black = "^23.0"  # Code formatter for consistent style
flake8 = "^6.0"  # Linter for code quality checks
mypy = "^1.0"  # Static type checker for Python

[tool.poetry.scripts]
app = "app:cli"  # Main entry point for click commands

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"