[tool.poetry]
name = "audio-transcription-tool"
version = "0.1.0"
description = "A tool for downloading, transcribing, and processing audio files from YouTube."
authors = ["SSD"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"  # Python version
django = "^4.0"  # Core Django framework
dependency-injector = "^4.40.0"  # Dependency injection framework
django-environ = "^0.4"  # Environment variable handling


# API and Real-time
djangorestframework = "^3.13"  # Django REST Framework
channels = "^3.0"  # Django Channels for WebSockets

# Task Queue and Distributed Processing
celery = "^5.2"  # Celery for async task management
dask = "^2022.5.0"  # Dask for distributed processing

# Transcription and NLP Libraries
openai-whisper = { git = "https://github.com/openai/whisper.git" } # OpenAI Whisper for transcription
whisperx = { git = "https://github.com/m-bain/whisperx.git" }  # WhisperX for transcription with speaker diarization and timestamps
speechbrain = "^0.5.13"  # Speech processing libraryspeechbrain = "^0.5.13"  # Speech processing library
torch = "^2.0.1"  # Deep learning support for NLP

# Data Processing and Scientific Libraries
numpy = "^1.23"
pandas = "^1.5"
scipy = "^1.10"

# NLP Tools
nltk = "^3.8"
spacy = "^3.5"
spacy-transformers = "^1.2"  # Transformer integration for NLP

# Audio Processing Utilities
pydub = "^0.25"  # Audio handling
soundfile = "^0.12"  # Read/write audio_processor files

# HTTP and CLI Utilities
requests = "^2.31"  # HTTP client
tqdm = "^4.65"  # Progress bars
tenacity = "^8.2"  # Retry logic
python-dotenv = "^1.0"  # Load .env files
pyyaml = "^6.0"  # YAML configuration
click = "^8.1.3"  # CLI creation
pybreaker = "^0.7.0"  # Circuit breaker library

# Logging
structlog = "^23.0.0"  # Structlog for advanced logging

# Memory Profiling
memory_profiler = "^0.61.0"  # Memory profiling library

# Date and Time Utilities
arrow = "^1.2"  # Date and time library

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Testing framework
pytest-cov = "^4.0"  # Code coverage
black = "^23.0"  # Code formatter
flake8 = "^6.0"  # Linter
mypy = "^1.0"  # Type checker

[tool.poetry.scripts]
app = "app:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
